--- a/sandbox/terraform/aft-providers.jinja
+++ b/sandbox/terraform/aft-providers.jinja
@@ -6,4 +6,9 @@ provider "aws" {
   assume_role {
     role_arn    = "{{ target_admin_role_arn }}"
   }
+  default_tags {
+    tags = {
+      managed_by                  = "AFT"
+    }
+  }
 }
